feat: swagger setup
