# swagger_output.json
@@ -1,13 +1,9 @@
 {
   "openapi": "3.0.0",
   "info": {
+    "title": "API Ecommerce",
     "version": "1.0.0",
-    "title": "API - Ecommerce",
-    "description": "API para gerenciamento de produtos e usuários",
-    "contact": {
-      "name": "Seu Nome",
-      "email": "seu@email.com"
-    }
+    "description": "Esta API foi desenvolvida para gestão de produtos e usuarios de uma plataforma de e-commerce."
   },
   "servers": [
     {
@@ -16,139 +12,44 @@
   ],
   "tags": [
     {
-      "name": "Produtos",
-      "description": "Endpoints para gerenciamento de produtos"
-    },
-    {
-      "name": "Usuários",
-      "description": "Endpoints para gerenciamento de usuários"
+      "name": "Produto",
+      "description": "Endpoints"
     }
   ],
   "paths": {
-    "/cadastro": {
+    "/produtos/create": {
       "post": {
-        "description": "",
+        "tags": [
+          "Produto"
+        ],
+        "description": "Cria um novo produto",
         "responses": {
+          "200": {
+            "description": "OK"
+          },
           "201": {
-            "description": "Created"
+            "description": "Produto criado com sucesso"
           },
           "400": {
-            "description": "Bad Request"
+            "description": "Dados inválidos"
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Dados inválidos"
           }
         },
         "requestBody": {
+          "required": true,
           "content": {
             "application/json": {
               "schema": {
-                "type": "object",
-                "properties": {
-                  "name": {
-                    "example": "any"
-                  },
-                  "email": {
-                    "example": "any"
-                  },
-                  "password": {
-                    "example": "any"
-                  }
-                }
+                "$ref": "#/components/schemas/Produto"
               }
             }
           }
         }
       }
     },
-    "/login": {
-      "post": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "email": {
-                    "example": "any"
-                  },
-                  "password": {
-                    "example": "any"
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/": {
-      "post": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "name": {
-                    "example": "any"
-                  },
-                  "product_code": {
-                    "example": "any"
-                  },
-                  "price": {
-                    "example": "any"
-                  },
-                  "description": {
-                    "example": "any"
-                  },
-                  "category": {
-                    "example": "any"
-                  },
-                  "product_stock": {
-                    "example": "any"
-                  },
-                  "requires_prescription": {
-                    "example": "any"
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/{product_code}": {
+    "produtos/{product_code}": {
       "delete": {
         "description": "",
         "parameters": [
@@ -173,6 +74,42 @@
           },
           "500": {
             "description": "Internal Server Error"
+          }
+        }
+      }
+    }
+  },
+  "components": {
+    "schemas": {
+      "Produto": {
+        "type": "object",
+        "properties": {
+          "type": {
+            "type": "string",
+            "example": "object"
+          },
+          "properties": {
+            "type": "object",
+            "properties": {
+              "nome": {
+                "type": "object",
+                "properties": {
+                  "type": {
+                    "type": "string",
+                    "example": "string"
+                  }
+                }
+              },
+              "preco": {
+                "type": "object",
+                "properties": {
+                  "type": {
+                    "type": "string",
+                    "example": "number"
+                  }
+                }
+              }
+            }
           }
         }
       }
